refactor: unify Client and Restaurant under AppUser + implement Order flow